{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 13,
  "lineage": "dcbed6dc-f16e-717c-d29b-95cae3c236cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07dfe2c11d33a069a",
            "arn": "arn:aws:ec2:ap-south-1:401780891012:instance/i-049b7cf89323230e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049b7cf89323230e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "apurva-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09971e131d35902b4"
              }
            ],
            "primary_network_interface_id": "eni-09971e131d35902b4",
            "private_dns": "ip-10-20-1-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.18",
            "public_dns": "ec2-43-205-206-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.206.227",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:401780891012:key/6b82e804-fa45-4dc7-b63b-10b56ec3190f",
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "ecommerce-devops"
                },
                "throughput": 125,
                "volume_id": "vol-0c3e23fe74344fc75",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d896994b6a815a38",
            "tags": {
              "Name": "ecommerce-jenkins",
              "Role": "CI-CD"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-jenkins",
              "Project": "ecommerce-devops",
              "Role": "CI-CD"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065dc618dd0e83beb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "i-049b7cf89323230e3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce",
            "aws_route_table.public",
            "aws_route_table_association.public",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.ecommerce",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07dfe2c11d33a069a",
            "arn": "arn:aws:ec2:ap-south-1:401780891012:instance/i-03479738819496a82",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03479738819496a82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "apurva-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-027d20b862cf3fd21"
              }
            ],
            "primary_network_interface_id": "eni-027d20b862cf3fd21",
            "private_dns": "ip-10-20-1-242.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.242",
            "public_dns": "ec2-13-233-207-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.207.8",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:401780891012:key/6b82e804-fa45-4dc7-b63b-10b56ec3190f",
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "ecommerce-devops"
                },
                "throughput": 125,
                "volume_id": "vol-054ba1f717febf631",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d896994b6a815a38",
            "tags": {
              "Name": "ecommerce-k3s-server"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-k3s-server",
              "Project": "ecommerce-devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077d96ded4293f616"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "i-03479738819496a82",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce",
            "aws_route_table.public",
            "aws_route_table_association.public",
            "aws_security_group.k3s_server",
            "aws_subnet.public",
            "aws_vpc.ecommerce",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecommerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:internet-gateway/igw-00fbee629bba6c958",
            "id": "igw-00fbee629bba6c958",
            "owner_id": "401780891012",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-igw"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-igw",
              "Project": "ecommerce-devops"
            },
            "vpc_id": "vpc-0c67e4ae578ca29b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "igw-00fbee629bba6c958",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:route-table/rtb-0c5b9784b524f68c6",
            "id": "rtb-0c5b9784b524f68c6",
            "owner_id": "401780891012",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fbee629bba6c958",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-public-rt"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-rt",
              "Project": "ecommerce-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c67e4ae578ca29b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "rtb-0c5b9784b524f68c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce",
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd56049c9d62a4c0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c5b9784b524f68c6",
            "subnet_id": "subnet-0d896994b6a815a38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "rtbassoc-0bd56049c9d62a4c0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:security-group/sg-065dc618dd0e83beb",
            "description": "Firewall rules for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065dc618dd0e83beb",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.161.69.90/32"
                ],
                "description": "Allow Jenkins UI from specific IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "122.161.69.90/32"
                ],
                "description": "Allow SSH from specific IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-server-sg",
            "name_prefix": "",
            "owner_id": "401780891012",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-jenkins-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-jenkins-sg",
              "Project": "ecommerce-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c67e4ae578ca29b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "sg-065dc618dd0e83beb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:security-group/sg-077d96ded4293f616",
            "description": "Firewall rules for k3s server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077d96ded4293f616",
            "ingress": [
              {
                "cidr_blocks": [
                  "122.161.69.90/32"
                ],
                "description": "Allow SSH from specific IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "122.161.69.90/32"
                ],
                "description": "Allow public HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "k3s-server-sg",
            "name_prefix": "",
            "owner_id": "401780891012",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-k3s-server-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-k3s-server-sg",
              "Project": "ecommerce-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c67e4ae578ca29b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "sg-077d96ded4293f616",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:subnet/subnet-0d896994b6a815a38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d896994b6a815a38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401780891012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-public-subnet"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-subnet",
              "Project": "ecommerce-devops"
            },
            "vpc_id": "vpc-0c67e4ae578ca29b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "subnet-0d896994b6a815a38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401780891012:vpc/vpc-0c67e4ae578ca29b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0fe15e38f0af867a0",
            "default_route_table_id": "rtb-0c079e0029031ed69",
            "default_security_group_id": "sg-002af0fe93c889e1d",
            "dhcp_options_id": "dopt-08a562a4e69f0a427",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c67e4ae578ca29b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c079e0029031ed69",
            "owner_id": "401780891012",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-vpc",
              "Project": "ecommerce-devops"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401780891012",
            "id": "vpc-0c67e4ae578ca29b3",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}